--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,80 +122,64 @@ jobs:
           paths: [backend/node_modules]
           key: backend-deps
 
-  # test-frontend:
-  #   <<: *imgdefault
-  #   steps:
-  #     - checkout
-  #     - jq/install
-  #     - restore_cache:
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: front-end test
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run test
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
+  test-frontend:
+    <<: *imgdefault
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-deps]
+      - run:
+          name: front-end test
+          command: |
+            cd frontend
+            npm install
+            npm run test
 
-  # test-backend:
-  #   <<: *imgdefault
-  #   steps:
-  #     - checkout
-  #     # - jq/install
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Back-end test
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run test
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
+
+  test-backend:
+    <<: *imgdefault
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-deps]
+      - run:
+          name: Back-end test
+          command: |
+            cd backend
+            npm install
+            npm run test
             
-  # scan-frontend:
-  #   <<: *imgdefault 
-  #   steps:
-  #     - checkout
-  #     - jq/install
-  #     - restore_cache:
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: front-end scan
-  #         command: |
-  #           cd frontend
-  #           npm update
-  #           npm install
-  #           npm audit fix --audit-level=critical --force
-  #           npm audit fix --force
-  #           npm audit --audit-level=critical
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
+  scan-frontend:
+    <<: *imgdefault 
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-deps]
+      - run:
+          name: front-end scan
+          command: |
+            cd frontend
+            npm update
+            npm install
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
+            npm audit --audit-level=critical
 
-  # scan-backend:
-  #   <<: *imgdefault 
-  #   steps:
-  #     - checkout
-  #     - jq/install
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Back-end scan
-  #         command: |
-  #           cd backend
-  #           npm update
-
-  #           npm install
-  #           npm audit fix --audit-level=critical --force
-  #           npm audit fix --force
-  #           npm audit --audit-level=critical
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
+  scan-backend:
+    <<: *imgdefault 
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-deps]
+      - run:
+          name: Back-end scan
+          command: |
+            cd backend
+            npm update
+            npm install
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
+            npm audit --audit-level=critical
 
   # deploy-infrastructure:
   #   docker:
@@ -556,14 +540,14 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
