--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 parameters:
   workflow-id:
     type: string
-    default: "${CIRCLE_WORKFLOW_ID}"
+    default: "${CIRCLE_WORKFLOW_ID:0:7}"
 
 commands:
   install_awscli:
@@ -26,22 +26,23 @@ commands:
             sudo apt install ansible -y
           
 
-#   destroy-environment:
-#     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-#     parameters:
-#       workflow_id:
-#         type: string
-#     steps:
-#       - run:
-#           name: Destroy environments
-#           when: on_fail
-#           command: |
-#             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
-#             aws s3 rb s3://udapeople-<<parameters.workflow_id>> --force
-#             aws cloudformation delete-stack \
-#               --stack-name "udapeople-backend-<<parameters.workflow_id>>"
-#             aws cloudformation delete-stack \
-#               --stack-name "udapeople-frontend-<<parameters.workflow_id>>"
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      workflow_id:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
+            aws s3 rb s3://udapeople-<<parameters.workflow_id>> --force
+            aws cloudformation delete-stack \
+              --stack-name "udapeople-backend-<<parameters.workflow_id>>"
+            aws cloudformation delete-stack \
+              --stack-name "udapeople-frontend-<<parameters.workflow_id>>"
 
 #   revert-migrations:
 #     description: Revert the last migration if successfully run in the current workflow.
@@ -226,46 +227,25 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure
-      - destroy-environment:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environment
 
-  # configure-infrastructure:
-  #   docker:
-  #   - image: python:alpine3.15 # that supports Ansible
-  #     environment:
-  #         VERSION: "1"
-  #         TYPEORM_CONNECTION: $TYPEORM_CONNECTION
-  #         TYPEORM_HOST: $TYPEORM_HOST
-  #         TYPEORM_USERNAME: $TYPEORM_USERNAME
-  #         TYPEORM_PASSWORD: $TYPEORM_PASSWORD
-  #         TYPEORM_DATABASE: $TYPEORM_DATABASE
-  #         TYPEORM_PORT: $TYPEORM_PORT
-  #         TYPEORM_ENTITIES: $TYPEORM_ENTITIES
-  #         ANSIBLE_HOST_KEY_CHECKING: False
-  #   steps:
-  #     - checkout
-  #     - install_dependencies
-  #     - add_ssh_keys:
-  #         fingerprints: ["31:15:91:9c:f5:09:f2:cb:04:af:21:79:2e:16:15:68"]
-  #     - attach_workspace:
-  #         at: ~/
-  #     # Add ssh keys with fingerprint
-  #     # attach workspace
-  #     - run: cat .circleci/ansible/inventory.txt 
-  #     # - run: yum install tar gzip -y
-  #     - run:
-  #         name: Configure server
-  #         command: |
-  #           cd .circleci/ansible
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt configure-server.yml
-
-  #     # Here's where you will add some code to rollback on failure
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1   
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+  configure-infrastructure:
+    docker:
+    - image: cimg/base:stable 
+    steps:
+      - checkout
+      - install_ansible
+      - add_ssh_keys:
+          fingerprints: ["31:15:91:9c:f5:09:f2:cb:04:af:21:79:2e:16:15:68"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt configure-server.yml
+      - destroy-environment
 
   # run-migrations:
   #   <<: *imgdefault # that supports NodeJS
@@ -558,8 +538,8 @@ workflows:
           filters:
             branches:
               only: [master]
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       # - run-migrations:
       #     requires: [configure-infrastructure]
       # - deploy-frontend:
