--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,52 +44,26 @@ commands:
             aws cloudformation delete-stack \
               --stack-name "udapeople-frontend-<<parameters.workflow_id>>"
 
-#   revert-migrations:
-#     description: Revert the last migration if successfully run in the current workflow.
-#     parameters:
-#       workflow_id:
-#         type: string  
-#     steps:
-#       - run:
-#           name: Revert migrations
-#           when: on_fail
-#           command: |
-#             ls -l
-#             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-#             SUCCESS=`curl --insecure https://kvdb.io/${kvd_token}/migration_<<parameters.workflow_id>>`
-#             echo $SUCCESS
-#             f (( $SUCCESS == 1 )); then
-#                 cd ~/project/backend
-#                 npm install
-#                 npm run migration:revert
-#             fi
-
-#   install_dependencies:
-#     description: Installs Python3, Ansible, AWSCLI,  py3-pip
-#     steps:
-#       - run:
-#           name: Install ansible
-#           command: |
-#                 apk add --update ansible
-#       - run:
-#           name: Install aws
-#           command: |
-#                 pip3 install --upgrade pip \
-#                 && pip3 install --no-cache-dir \
-#                     awscli \
-#                 && rm -rf /var/cache/apk/*
-#                 aws --version 
-#       - run:
-#           name: Install tar and gzip and curl jq
-#           command: |
-#             apk add tar gzip curl jq wget
-#       - run:
-#           name: Install NPM and Node
-#           command: |            
-#             apk add --update nodejs npm
-#             npm --version
-#             node -v
-#             npm install -g typescript
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      workflow_id:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            ls -l
+            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
+            SUCCESS=$(curl --insecure https://kvdb.io/${kvdb_io}/migration_<<parameters.workflow_id>>)
+            echo $SUCCESS
+            f (( $SUCCESS == 1 )); then
+                cd ~/project/backend
+                npm install
+                npm run migration:revert
+            fi
 
 imgdefault: &imgdefault
   docker:
@@ -247,73 +221,33 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment
 
-  # run-migrations:
-  #   <<: *imgdefault # that supports NodeJS
-  #   steps:
-  #     - checkout
-  #     - attach_workspace:
-  #         at: ~/
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt update -y 
-  #           sudo apt upgrade -y
-  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #           unzip awscliv2.zip
-  #           sudo ./aws/install
-  #           # sudo apt install python3 python3-pip -y
-  #           # python3 -m pip install --user ansible
-  #           sudo apt install tar gzip -y
-  #     - run:
-  #         name: enviroment variables
-  #         command:  |
-  #             cd backend
-  #             echo "TYPEORM_CONNECTION=${TYPEORM_CONNECTION}" >> .env
-  #             echo "TYPEORM_ENTITIES=${TYPEORM_ENTITIES}" >> .env
-  #             echo "TYPEORM_HOST=${TYPEORM_HOST}" >> .env
-  #             echo "TYPEORM_PORT=${TYPEORM_PORT}" >> .env
-  #             echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> .env
-  #             echo "TYPEORM_PASSWORD=password" >> .env
-  #             echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> .env
-  #             echo "TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}" >> .env
-  #             echo "TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}" >> .env
-  #             cat .env
-  #             echo $TYPEORM_PASSWORD
-
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           # Run and save the migration output
-  #           npm run migrations > migrations_dump.txt
-  #           echo "migration file"
-  #           cat migrations_dump.txt
-  #           ls -l
-  #     - run:
-  #         name: Send migration results to memstash
-  #         command: |
-  #           echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
-  #           cat ~/project/backend/migrations_dump.txt
-  #           cd backend
-  #           if grep -q "has been executed successfully." migrations_dump.txt
-  #           then
-  #             curl https://kvdb.io/${kvd_token}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-  #             echo "MIGRATION WAS SUCCESSFUL"
-  #           else
-  #             curl https://kvdb.io/${kvd_token}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '0'
-  #             echo "MIGRATION FAILED"
-  #           fi  
-  #    # Here's where you will add some code to rollback on failure
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1      
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  #     - revert-migrations:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+  run-migrations:
+    <<: *imgdefault  # that supports NodeJS
+    steps:
+      - checkout
+      - install_awscli
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+            echo "migration file"
+            cat migrations_dump.txt
+            ls -l
+      - run:
+          name: Send migration results to memstash
+          command: |
+            echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
+            cat ~/project/backend/migrations_dump.txt
+            cd backend
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl https://kvdb.io/${kvdb_io}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              echo "MIGRATION WAS SUCCESSFUL"
+            fi
+      - destroy-environmen
+      - revert-migrations
 
   # deploy-frontend:
   #   docker:
@@ -474,7 +408,7 @@ jobs:
   #                         list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
   #                         --no-paginate --output text)
   #           echo OldWorkflowID $OldWorkflowID 
-  #           curl https://kvdb.io/${kvd_token}/${CIRCLE_WORKFLOW_ID:0:7} -d $OldWorkflowID
+  #           curl https://kvdb.io/${kvdb_io}/${CIRCLE_WORKFLOW_ID:0:7} -d $OldWorkflowID
   #           aws cloudformation deploy \
   #           --template-file .circleci/files/cloudfront.yml \
   #           --stack-name InitialStack \
@@ -499,7 +433,7 @@ jobs:
   #           name: Get old stack workflow id
   #           command: |
   #               # Fetch the Old workflow ID
-  #               OldWorkflowID=$(curl --insecure https://kvdb.io/${kvd_token}/${CIRCLE_WORKFLOW_ID:0:7} )
+  #               OldWorkflowID=$(curl --insecure https://kvdb.io/${kvdb_io}/${CIRCLE_WORKFLOW_ID:0:7} )
   #               echo OldWorkflowID: "${OldWorkflowID}"
   #               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
   #               # Fetch the stack names          
