--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,44 +1,31 @@
 ---
-- name: Copy backend compiled web server
+- name: create backend app directory
   copy:
-    src: /root/project/artifact.tar.gz 
-    dest: /home/ubuntu
+    path:  ~/backend-app
+    state: directory
+
 - name: extract backend files
-  shell: |
-    cd /home/ubuntu/
-    tar xvf artifact.tar.gz
+  unarchive: 
+    src: artifact.tar.gz
+    dest: ~/backend-app
 
-- name: Install node
+- name: Install node dependencies
   shell: |
-    cd /home/ubuntu/
-    npm install
-    npm install
+    cd ~/backend-app
+    npm i
+- name: excute node app with pm2
+  shell: |
+    cd ~/backend-app
     pm2 stop default
-    pm2 start npm -- start
-# - name: Build Node
-#   shell: |
-#     cd /home/ubuntu/
-#     npm run build
-
-# - name: stop pm2
-#   shell: |
-#     cd /home/ubuntu/
-#     pm2 stop default
-
-# - name: Start backend with pm2
-#   shell: |
-#     cd /home/ubuntu/
-#     export $(cat .env | xargs) && rails 
-
-#     pm2 start npm -- start --update-env
+    pm2 start main.js
+  register: execute_node
     
-# - name: print message
-#   debug:
-#     msg: "{{ execute_node.stdout_lines }}"
-# - name: save your list of processes
-#   shell: |
-#     cd /home/ubuntu/
-#     pm2 save  
-
+- name: print message
+  debug:
+    msg: "{{ execute_node.stdout_lines }}"
+- name: configure pm2 to start as a service
+  become: true
+  shell: |
+    env: PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
 
 
