--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,17 +15,24 @@ commands:
             unzip awscliv2.zip
             sudo ./aws/install
   install_ansible:
-    description: Install ansible v2
+    description: Install ansible 
     steps:
       - run:
-          name: Install ansible v2
+          name: Install ansible
           command: |
             sudo apt update -y
             sudo apt install software-properties-common -y
             sudo add-apt-repository --yes --update ppa:ansible/ansible
             sudo apt install ansible -y
+  install_nodejs:
+    description: Install nodej 13
+    steps:
+      - run:
+          name: Install nodej 13
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+            sudo apt install -y nodejs 
           
-
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
@@ -241,119 +248,89 @@ jobs:
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             cat ~/project/backend/migrations_dump.txt
             cd backend
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt
             then
               curl https://kvdb.io/${kvdb_io}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
               echo "MIGRATION WAS SUCCESSFUL"
             fi
       - destroy-environment
+     - revert-migrations
+
+  deploy-frontend:
+    docker:
+    - image: cimg/base:stable 
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - restore_cache:
+          keys: [frontend-deps]
+      - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+            # your code here
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text |tail -1)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            cat .env
+            npm run build
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
       - revert-migrations
 
-  # deploy-frontend:
-  #   docker:
-  #   - image: circleci/node:13.8.0 # that supports NodeJS
-  #     environment:
-  #       TYPEORM_CONNECTION: $TYPEORM_CONNECTION
-  #       TYPEORM_HOST: $TYPEORM_HOST
-  #       TYPEORM_USERNAME: $TYPEORM_USERNAME
-  #       TYPEORM_PASSWORD: $TYPEORM_PASSWORD
-  #       TYPEORM_DATABASE: $TYPEORM_DATABASE
-  #       TYPEORM_PORT: $TYPEORM_PORT
-  #       TYPEORM_ENTITIES: $TYPEORM_ENTITIES
-  #       ANSIBLE_HOST_KEY_CHECKING: False # that supports AWS CLI
-  #   steps:
-  #     - checkout
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt update && sudo apt install -yy less
-  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #           unzip awscliv2.zip
-  #           sudo ./aws/install
-  #           sudo apt install tar gzip -y
-  #     - run:
-  #         name: Get backend url
-  #         command: |
-  #           # your code here
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #             --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #             --output text |tail -1)
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "API_URL = ${API_URL}"
-  #           echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-  #           cat frontend/.env
-  #     - run:
-  #         name: Deploy frontend objects
-  #         command: |
-  #           cd frontend
-  #           cat .env
-  #           npm install
-  #           npm run build
-  #           tar -czf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+  deploy-backend:
+    docker:
+    - image: cimg/base:stable 
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - add_ssh_keys:
+          fingerprints: ["31:15:91:9c:f5:09:f2:cb:04:af:21:79:2e:16:15:68"]
+      - attach_workspace:
+          at: ~/
+      - restore_cache:
+          keys: [backend-deps]
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+      - run:
+          name: Package backend
+          command: |
+            cd backend
+            npm run build
+            tar -C artifact.tar.gz dist/* package* 
+            cd ..
+            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
 
-  #     # Here's where you will add some code to rollback on failure
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  #     - revert-migrations:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-
-  # deploy-backend:
-  #   docker:
-  #   - image: circleci/node:13.8.0 # that supports NodeJS
-  #     environment:
-  #       TYPEORM_CONNECTION: $TYPEORM_CONNECTION
-  #       TYPEORM_HOST: $TYPEORM_HOST
-  #       TYPEORM_USERNAME: $TYPEORM_USERNAME
-  #       TYPEORM_PASSWORD: $TYPEORM_PASSWORD
-  #       TYPEORM_DATABASE: $TYPEORM_DATABASE
-  #       TYPEORM_PORT: $TYPEORM_PORT
-  #       TYPEORM_ENTITIES: $TYPEORM_ENTITIES
-  #       ANSIBLE_HOST_KEY_CHECKING: False
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints: ["31:15:91:9c:f5:09:f2:cb:04:af:21:79:2e:16:15:68"]
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt update && sudo apt install -yy less
-  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #           unzip awscliv2.zip
-  #           sudo ./aws/install
-  #           sudo apt install python3 python3-pip -y
-  #           python3 -m pip install --user ansible
-  #           sudo apt install tar gzip -y
-  #     - run:
-  #         name: Deploy backend
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run build
-  #           cp package* ./dist
-  #           cd ..
-  #           tar -C backend -czf artifact.tar.gz .
-  #           cd .circleci/ansible
-  #           echo "Contents  of the inventory.txt file is -------"
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt deploy-backend.yml
-  #     # Here's where you will add some code to rollback on failure
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1  
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  #     - revert-migrations:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-
+      - run:
+          name: Deploy backend
+          command: |
+            export TYPEORM_MIGRATIONS_DIR=./src/migrations
+            export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+            export TYPEORM_MIGRATIONS=./migrations/*{.ts,.js}
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment
+      - revert-migrations
   # smoke-test:
   #   docker:
   #     - image: python:alpine3.15 # Lightweight Docker image 
@@ -476,10 +453,10 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
