--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ commands:
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             SUCCESS=$(curl --insecure https://kvdb.io/${kvdb_io}/migration_<<parameters.workflow_id>>)
             echo $SUCCESS
-            f (( $SUCCESS == 1 )); then
+            if (( $SUCCESS == 1 )); then
                 cd ~/project/backend
                 npm install
                 npm run migration:revert
@@ -315,7 +315,7 @@ jobs:
           command: |
             cd backend
             npm run build
-            tar -C artifact.tar.gz dist/* package* 
+            tar -czf artifact.tar.gz dist/* package* 
             cd ..
             cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
 
@@ -331,95 +331,96 @@ jobs:
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
       - revert-migrations
-  # smoke-test:
-  #   docker:
-  #     - image: python:alpine3.15 # Lightweight Docker image 
-  #   steps:
-  #     - checkout
-  #     - install_dependencies
-  #     - run:
-  #         name: Backend smoke test.
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #               --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #               --output text |tail -1)
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "API_URL=${API_URL}"
-  #           if curl "${API_URL}/api/status" | grep "ok"
-  #           then
-  #               return 0
-  #           else
-  #               return 1
-  #           fi
-  #     - run:
-  #         name: Frontend smoke test.
-  #         command: |
-  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-  #           echo ${URL} 
-  #           echo `curl -s ${URL}`
-  #           if curl -s ${URL} | grep "Welcome"
-  #           then
-  #               # Change this to 0 after the job fails
-  #             return 0
-  #           else
-  #             return 1
-  #           fi
-  #     # Here's where you will add some code to rollback on failure  
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  #     - revert-migrations:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  # cloudfront-update:
-  #   docker:
-  #   - image: amazon/aws-cli # that supports AWS CLI
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Update cloudfront distribution
-  #         command: |
-  #           export OldWorkflowID=$(aws cloudformation \
-  #                         list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-  #                         --no-paginate --output text)
-  #           echo OldWorkflowID $OldWorkflowID 
-  #           curl https://kvdb.io/${kvdb_io}/${CIRCLE_WORKFLOW_ID:0:7} -d $OldWorkflowID
-  #           aws cloudformation deploy \
-  #           --template-file .circleci/files/cloudfront.yml \
-  #           --stack-name InitialStack \
-  #           --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-  #           --tags project=udapeople
-  #     - destroy-environment:
-  #     - revert-migrations:
+  
+  smoke-test:
+    docker:
+    - image: cimg/base:stable  # Lightweight Docker image 
+    steps:
+      - checkout
+      - install_awscli
+      - run:
+          name: Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                --output text |tail -1)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL=${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                return 0
+            else
+                return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            echo `curl -s ${URL}`
+            if curl -s ${URL} | grep "Welcome"
+            then
+                # Change this to 0 after the job fails
+              return 0
+            else
+              return 1
+            fi
+      # Here's where you will add some code to rollback on failure  
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
-  # cleanup:
-  #     docker:
-  #       - image: amazon/aws-cli # that supports AWS CLI
-  #     steps:
-  #       - checkout
-  #       # Checkout code from git
-  #       - run:
-  #           name: Get old stack workflow id
-  #           command: |
-  #               # Fetch the Old workflow ID
-  #               OldWorkflowID=$(curl --insecure https://kvdb.io/${kvdb_io}/${CIRCLE_WORKFLOW_ID:0:7} )
-  #               echo OldWorkflowID: "${OldWorkflowID}"
-  #               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-  #               # Fetch the stack names          
-  #               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-  #                       --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-  #               echo Stack names: "${STACKS[@]}"
-  #               if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
-  #               then
-  #                   if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]  
-  #                   then
-  #                   aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-  #                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-  #                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-  #                   fi
-  #               fi
+  cloudfront-update:
+    docker:
+    - image: amazon/aws-cli # that supports AWS CLI
+    steps:
+      - checkout
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+                          list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                          --no-paginate --output text)
+            echo OldWorkflowID $OldWorkflowID 
+            curl https://kvdb.io/${kvdb_io}/${CIRCLE_WORKFLOW_ID:0:7} -d $OldWorkflowID
+            aws cloudformation deploy \
+            --template-file .circleci/files/cloudfront.yml \
+            --stack-name InitialStack \
+            --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --tags project=udapeople
+      - destroy-environment
+      - revert-migrations
+
+  cleanup:
+      docker:
+        - image: amazon/aws-cli # that supports AWS CLI
+      steps:
+        - checkout
+        - run:
+            name: Get old stack workflow id
+            command: |
+                # Fetch the Old workflow ID
+                OldWorkflowID=$(curl --insecure https://kvdb.io/${kvdb_io}/${CIRCLE_WORKFLOW_ID:0:7} )
+                echo OldWorkflowID: "${OldWorkflowID}"
+                echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+                # Fetch the stack names          
+                export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                        --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+                echo Stack names: "${STACKS[@]}"
+                if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
+                then
+                    if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]  
+                    then
+                    aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                    aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                    aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                    fi
+                fi
 
 
 workflows:
@@ -448,10 +449,10 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
       
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
