--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,7 +15,7 @@
     npm i
 - name: excute node app with pm2
   shell: |
-    cd ~/backend-app
+    cd ~/backend-app/dist
     pm2 stop default
     pm2 start main.js
   register: execute_node
